2019/Technical/keynote/Weather/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - <yourFQDN>
    secretName: tls-secret
  rules:
  - host: <YourFQDN>
    http:
      paths:
      - backend:
          serviceName: weather
          servicePort: 5050
        path: /
